new nextjs frontend added
