# src/main/java/el/itcompany/controllers/InvoiceController.java
@@ -1,0 +1,52 @@
+package el.itcompany.controllers;
+
+import el.itcompany.entities.Invoice;
+import el.itcompany.services.InvoiceService;
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
+
+@RestController
+@RequestMapping("/invoices")
+public class InvoiceController {
+
+    private final InvoiceService invoiceService;
+
+    public InvoiceController(InvoiceService invoiceService) {
+        this.invoiceService = invoiceService;
+    }
+
+    @GetMapping
+    public List<Invoice> getAllInvoices() {
+        return invoiceService.getAllInvoices();
+    }
+
+    @GetMapping("/{id}")
+    public Invoice getInvoiceById(@PathVariable Long id) {
+        return invoiceService.getInvoiceById(id);
+    }
+
+    @PostMapping
+    @ResponseStatus(HttpStatus.CREATED)
+    public Invoice createInvoice(@RequestBody Invoice invoice) {
+        return invoiceService.createInvoice(invoice);
+    }
+
+    @PutMapping("/{id}")
+    public Invoice updateInvoice(@PathVariable Long id, @RequestBody Invoice invoice) {
+        return invoiceService.updateInvoice(id, invoice);
+    }
+
+    @DeleteMapping("/{id}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteInvoice(@PathVariable Long id) {
+        invoiceService.deleteInvoice(id);
+    }
+
+    @PostMapping("/{id}/pay")
+    public Invoice payInvoice(@PathVariable Long id) {
+        return invoiceService.payInvoice(id);
+    }
+}
