# swagger.yaml
@@ -15,15 +15,17 @@ tags:
     description: View and manage the company's employees
   - name: inventory
     description: Operations about the company's inventories
-  - name: item
+  - name: items
     description: Operations about the items that the company owns
-  - name: project
+  - name: projects
     description: Operations about the company's projects
   - name: sector
     description: Operations about the sectors that the company covers
 paths:
   /sectors:
-     get:
+    get:
+      tags:
+        - sector
       summary: Get all sectors
       responses:
         '200':
@@ -35,6 +37,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/Sector'
     post:
+      tags:
+        - sector
       summary: Create a new sector
       requestBody:
         required: true
@@ -51,6 +55,8 @@ paths:
                 $ref: '#/components/schemas/Sector'
   /sectors/{id}:
     get:
+      tags:
+        - sector
       summary: Get sector by ID
       parameters:
         - name: id
@@ -68,6 +74,8 @@ paths:
         '404':
           description: Sector not found
     put:
+      tags:
+        - sector
       summary: Update a sector by ID
       parameters:
         - name: id
@@ -91,6 +99,8 @@ paths:
         '404':
           description: Sector not found
     delete:
+      tags:
+        - sector
       summary: Delete sector by ID
       parameters:
         - name: id
@@ -103,6 +113,8 @@ paths:
           description: Sector deleted
   /buildings:
     get:
+      tags:
+        - building
       summary: Get all buildings
       responses:
         '200':
@@ -114,6 +126,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/Building'
     post:
+      tags:
+        - building
       summary: Create a new building
       requestBody:
         required: true
@@ -130,6 +144,8 @@ paths:
                 $ref: '#/components/schemas/Building'
   /buildings/{id}:
     get:
+      tags:
+        - building
       summary: Get building by ID
       parameters:
         - name: id
@@ -147,6 +163,8 @@ paths:
         '404':
           description: Building not found
     put:
+      tags:
+        - building
       summary: Update a building by ID
       parameters:
         - name: id
@@ -170,6 +188,8 @@ paths:
         '404':
           description: Building not found
     delete:
+      tags:
+        - building
       summary: Delete building by ID
       parameters:
         - name: id
@@ -182,6 +202,8 @@ paths:
           description: Building deleted
   /employees:
     get:
+      tags:
+        - employee
       summary: Get all employees
       responses:
         '200':
@@ -193,6 +215,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/Employee'
     post:
+      tags:
+        - employee
       summary: Create a new employee
       requestBody:
         required: true
@@ -209,6 +233,8 @@ paths:
                 $ref: '#/components/schemas/Employee'
   /employees/{id}:
     get:
+      tags:
+        - employee
       summary: Get employee by ID
       parameters:
         - name: id
@@ -226,6 +252,8 @@ paths:
         '404':
           description: Employee not found
     put:
+      tags:
+        - employee
       summary: Update an employee by ID
       parameters:
         - name: id
@@ -249,6 +277,8 @@ paths:
         '404':
           description: Employee not found
     delete:
+      tags:
+        - employee
       summary: Delete employee by ID
       parameters:
         - name: id
@@ -261,6 +291,8 @@ paths:
           description: Employee deleted
   /inventory:
     get:
+      tags:
+        - inventory
       summary: Get all inventories
       responses:
         '200':
@@ -272,6 +304,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/Inventory'
     post:
+      tags:
+        - inventory
       summary: Create a new inventory
       requestBody:
         required: true
@@ -288,6 +322,8 @@ paths:
                 $ref: '#/components/schemas/Inventory'
   /inventory/{id}:
     get:
+      tags:
+        - inventory
       summary: Get inventory by ID
       parameters:
         - name: id
@@ -305,6 +341,8 @@ paths:
         '404':
           description: Inventory not found
     put:
+      tags:
+        - inventory
       summary: Update inventory by ID
       parameters:
         - name: id
@@ -328,6 +366,8 @@ paths:
         '404':
           description: Inventory not found
     delete:
+      tags:
+        - inventory
       summary: Delete inventory by ID
       parameters:
         - name: id
@@ -340,6 +380,8 @@ paths:
           description: Inventory deleted
   /inventory/{inventoryId}/items:
     get:
+      tags:
+        - inventory
       summary: Get items of an inventory
       parameters:
         - name: inventoryId
@@ -357,6 +399,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/Item'
     post:
+      tags:
+        - inventory
       summary: Add item to inventory
       parameters:
         - name: inventoryId
@@ -379,6 +423,8 @@ paths:
                 $ref: '#/components/schemas/Inventory'
   /inventory/{inventoryId}/items/{itemId}:
     delete:
+      tags:
+        - inventory
       summary: Remove item from inventory
       parameters:
         - name: inventoryId
@@ -400,6 +446,8 @@ paths:
                 $ref: '#/components/schemas/Inventory'
   /items:
     get:
+      tags:
+        - items
       summary: Get all items
       responses:
         '200':
@@ -411,6 +459,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/Item'
     post:
+      tags:
+        - items
       summary: Create a new item
       requestBody:
         required: true
@@ -427,6 +477,8 @@ paths:
                 $ref: '#/components/schemas/Item'
   /items/{id}:
     get:
+      tags:
+        - items
       summary: Get item by ID
       parameters:
         - name: id
@@ -444,6 +496,8 @@ paths:
         '404':
           description: Item not found
     put:
+      tags:
+        - items
       summary: Update item by ID
       parameters:
         - name: id
@@ -467,6 +521,8 @@ paths:
         '404':
           description: Item not found
     delete:
+      tags:
+        - items
       summary: Delete item by ID
       parameters:
         - name: id
@@ -479,6 +535,8 @@ paths:
           description: Item deleted
   /projects:
     get:
+      tags:
+        - projects
       summary: Get all projects
       responses:
         '200':
@@ -490,6 +548,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/Project'
     post:
+      tags:
+        - projects
       summary: Create a new project
       requestBody:
         required: true
@@ -506,6 +566,8 @@ paths:
                 $ref: '#/components/schemas/Project'
   /projects/{id}:
     get:
+      tags:
+        - projects
       summary: Get project by ID
       parameters:
         - name: id
@@ -523,6 +585,8 @@ paths:
         '404':
           description: Project not found
     put:
+      tags:
+        - projects
       summary: Update project by ID
       parameters:
         - name: id
@@ -546,6 +610,8 @@ paths:
         '404':
           description: Project not found
     delete:
+      tags:
+        - projects
       summary: Delete project by ID
       parameters:
         - name: id
@@ -556,6 +622,187 @@ paths:
       responses:
         '204':
           description: Project deleted
+  /invoices:
+    get:
+      tags:
+        - invoices
+      summary: Get all invoices
+      responses:
+        '200':
+          description: List of invoices
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Invoice'
+    post:
+      tags:
+        - invoices
+      summary: Create a new invoice
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Invoice'
+      responses:
+        '201':
+          description: Invoice created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Invoice'
+  /invoices/{id}:
+    get:
+      tags:
+        - invoices
+      summary: Get invoice by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Invoice found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Invoice'
+        '404':
+          description: Invoice not found
+    put:
+      tags:
+        - invoices
+      summary: Update invoice by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Invoice'
+      responses:
+        '200':
+          description: Invoice updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Invoice'
+        '404':
+          description: Invoice not found
+    delete:
+      tags:
+        - invoices
+      summary: Delete invoice by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Invoice deleted
+  /budget:
+    get:
+      tags:
+        - budget
+      summary: Get current company budget
+      responses:
+        '200':
+          description: The current budget
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompanyBudget'
+  /budget/add:
+    post:
+      tags:
+        - budget
+      summary: Add funds to the budget
+      parameters:
+        - in: query
+          name: amount
+          required: true
+          schema:
+            type: number
+            format: double
+          description: Amount to add
+      responses:
+        '200':
+          description: Updated budget after adding funds
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompanyBudget'
+  /budget/reserve:
+    post:
+      summary: Reserve funds from the budget
+      tags:
+        - budget
+      parameters:
+        - in: query
+          name: amount
+          required: true
+          schema:
+            type: number
+            format: double
+          description: Amount to reserve
+      responses:
+        '200':
+          description: Updated budget after reserving funds
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompanyBudget'
+  /budget/debit:
+    post:
+      summary: Debit reserved funds
+      tags:
+        - budget
+      parameters:
+        - in: query
+          name: amount
+          required: true
+          schema:
+            type: number
+            format: double
+          description: Amount to debit from reserved funds
+      responses:
+        '200':
+          description: Updated budget after debiting funds
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompanyBudget'
+  /budget/release:
+    post:
+      summary: Release previously reserved funds
+      tags:
+        - budget
+      parameters:
+        - in: query
+          name: amount
+          required: true
+          schema:
+            type: number
+            format: double
+          description: Amount to release back into available funds
+      responses:
+        '200':
+          description: Updated budget after releasing funds
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CompanyBudget'
 components:
   schemas:
     Sector:
@@ -728,3 +975,60 @@ components:
         - manager
         - budget
         - status
+    Invoice:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        client:
+          type: string
+        project:
+          $ref: '#/components/schemas/Project'
+        issueDate:
+          type: string
+          format: date
+        dueDate:
+          type: string
+          format: date
+        amount:
+          type: number
+          format: float
+        tax:
+          type: number
+          format: float
+        discount:
+          type: number
+          format: float
+        totalAmount:
+          type: number
+          format: float
+        status:
+          type: string
+          enum: [ DRAFT, SENT, PAID, OVERDUE ]
+      required:
+        - client
+        - issueDate
+        - dueDate
+        - amount
+        - totalAmount
+        - status
+    CompanyBudget:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        totalFunds:
+          type: number
+          format: double
+        reservedFunds:
+          type: number
+          format: double
+        availableFunds:
+          type: number
+          format: double
+      required:
+        - totalFunds
+        - reservedFunds
+        - availableFunds
